--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   charts_flutter: ^0.9.0
+  percent_indicator: "^2.1.7+2"
 
 
   # The following adds the Cupertino Icons font to your application.
