Optimized UI and added routing, themes, colors and a better package structure

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ flutter:
     - assets/images/test_prep_images/
     - assets/images/result-screen/
     - assets/images/test_connection_images/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
