--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   cupertino_icons: "^0.1.3"
   firebase_auth: "^0.18.3"
   cloud_firestore: "^0.14.3"
+  provider: ^4.3.2+2
+  syncfusion_flutter_calendar: ^18.3.47
 
 dev_dependencies:
   flutter_test:
