--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,8 +32,10 @@ dependencies:
   cupertino_icons: "^0.1.3"
   firebase_auth: "^0.18.3"
   cloud_firestore: "^0.14.3"
+  firebase_crashlytics: ^0.2.3
   provider: ^4.3.2+2
   syncfusion_flutter_calendar: ^18.3.47
+  flutter_spinkit: "^4.1.2"
 
 dev_dependencies:
   flutter_test:
