--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   provider: ^4.3.2+2
   syncfusion_flutter_calendar: ^18.3.47
   flutter_spinkit: "^4.1.2"
+  intl: ^0.16.1
 
 dev_dependencies:
   flutter_test:
