--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,13 +28,13 @@ dependencies:
   auto_route: ^0.2.1
   audioplayers: ^0.16.2
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: "^0.1.3"
   firebase_auth: "^0.18.3"
   cloud_firestore: "^0.14.3"
-  firebase_crashlytics: ^0.2.3
+  firebase_core: "^0.5.2"
+  firebase_crashlytics: "^0.2.3"
   provider: ^4.3.2+2
   syncfusion_flutter_calendar: ^18.3.47
   flutter_spinkit: "^4.1.2"
